Add Comments and Subscriptions

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -21,3 +21,23 @@ ru:
       destroyed: "Вы удалили мероприятие :("
     users:
       updated: "Вы обновили свой профиль"
+    comments:
+      destroyed: "Комментарий удалён"
+      created: "Ваш комментарий добавлен"
+      error: "Ошибка с комментарием"
+    subscription:
+      created: "Вы подписаны на это событие"
+      destroyed: "Участник отписан"
+      error: "Подписка/отписка не сработала"
+
+  app:
+    name: "Шашлыки"
+    company: "Хороший программист"
+
+  comments:
+    comment:
+      destroy_confirm: "Вы уверены, что хотите удалить этот комментарий?"
+
+  subscriptions:
+    subscription:
+      destroy_confirm: "Вы уверены, что хотите удалить эту подписку?"
