--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -37,6 +37,9 @@ ru:
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по восстановлению вашего пароля."
       updated: "Ваш пароль успешно изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль успешно изменён."
+      new:
+        send_me_reset_password_instructions: "Отправить новый пароль"
+        forgot_your_password: "Восстановление пароля"
     registrations:
       destroyed: "До свидания! Ваша учётная запись успешно удалена. Надеемся снова увидеть вас."
       signed_up: "Добро пожаловать! Вы успешно зарегистрировались."
@@ -48,6 +51,11 @@ ru:
       updated_but_not_signed_in: "Ваш аккаунт успешно изменен, но так как ваш пароль изменился, нужно войти снова."
       new:
         sign_up: "Регистрация"
+    shared:
+      links:
+        login: "Войти"
+        forgot_your_password: "Забыли пароль?"
+        sign_up: "Зарегистрироваться"
     sessions:
       signed_in: "Вход в систему выполнен."
       signed_out: "Выход из системы выполнен."
