Add delete button for Events

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -19,6 +19,10 @@ ru:
       created: "Событие было успешно создано"
       updated: "Вы обновили мероприятие"
       destroyed: "Вы удалили мероприятие :("
+      show:
+        are_you_sure: "Вы уверены?"
+        delete: "Удалить"
+        change: "Изменить"
     users:
       updated: "Вы обновили свой профиль"
     comments:
@@ -49,3 +53,9 @@ ru:
         few: "сохранение не удалось из-за %{count} ошибок"
         many: "охранение не удалось из-за %{count} ошибок"
         other: "сохранение не удалось из-за %{count} ошибки"
+
+  events:
+    show:
+      are_you_sure: "Вы уверены?"
+      delete: "Удалить"
+      change: "Изменить"
