Fix russian translate and style

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -15,6 +15,7 @@ ru:
         password: "Пароль"
         password_confirmation: "Подтверждение пароля"
         current_password: "Текущий пароль"
+        remember_me: "Запомнить меня"
       event:
         title: "Название"
         address: "Место проведения"
