Add EventMailer, mailjet

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -106,3 +106,18 @@ ru:
 
   confirm:
     phrase: "Вы уверены?"
+
+  event_mailer:
+    comment:
+      title: "Новый комментарий"
+      author: "Автор"
+      event: "Событие"
+      datetime: "Состоится"
+      owner: "Организатор"
+    subscription:
+      title: "Новая подписка"
+      name: "Имя"
+      email: "Email"
+      event: "Событие"
+      datetime: "Состоится"
+      owner: "Организатор"
