--- a/config/locales/devise.ru.yml
+++ b/config/locales/devise.ru.yml
@@ -37,6 +37,11 @@ ru:
       send_paranoid_instructions: "Если ваш адрес email есть в нашей базе данных, то в течение нескольких минут Вы получите письмо с инструкциями по восстановлению вашего пароля."
       updated: "Ваш пароль успешно изменён. Теперь вы вошли в систему."
       updated_not_active: "Пароль успешно изменён."
+      edit:
+        change_your_password: "Смена пароля"
+        new_password: "Новый пароль"
+        confirm_new_password: "Подтвердить новый пароль"
+        change_my_password: "Сменить пароль"
       new:
         send_me_reset_password_instructions: "Отправить новый пароль"
         forgot_your_password: "Восстановление пароля"
@@ -59,6 +64,7 @@ ru:
         back: "Вернуться"
         cancel: "Удалить профиль"
     shared:
+      minimum_password_length: "Не менее 6 символов"
       links:
         login: "Войти"
         forgot_your_password: "Забыли пароль?"
