Fix Subscription Email

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -29,6 +29,12 @@ ru:
       subscription:
         user_name: "Ваше имя"
         user_email: "Ваш email"
+    errors:
+      models:
+        subscription:
+          attributes:
+            base:
+              check_email_registered: "Данный email зарегистрирован"
   controllers:
     events:
       created: "Событие было успешно создано"
